docs(stories): update wip

--- a/index.html
+++ b/index.html
@@ -589,8 +589,15 @@
                     <sgds-button variant="info">Hello World</sgds-button>
                     <sgds-button variant="danger">Hello World</sgds-button>
                     <sgds-button variant="light">Hello World</sgds-button>
-                    <sgds-button variant="link" target="_blank" href="#">Hello World</sgds-button>
-                    <sgds-button variant="dark">Hello World</sgds-button>
+                    <sgds-button  variant="outline-primary">Outlined World</sgds-button>
+                    <sgds-button  variant="outline-secondary">Outlined World</sgds-button>
+                    <sgds-button  variant="outline-warning">Outlined World</sgds-button>
+                    <sgds-button  variant="outline-success">Outlined World</sgds-button>
+                    <sgds-button  variant="outline-info">Outlined World</sgds-button>
+                    <sgds-button  variant="outline-danger">Outlined World</sgds-button>
+                    <sgds-button  variant="outline-light">Outlined World</sgds-button>
+                    <sgds-button  variant="outline-link" target="_blank" href="#">Outlined World</sgds-button>
+                    <sgds-button  variant="outline-dark">Hello World</sgds-button>
                     <sgds-button disabled variant="primary">Disabled World</sgds-button>
                     <sgds-button disabled variant="secondary">Disabled World</sgds-button>
                     <sgds-button disabled variant="warning">Disabled World</sgds-button>
