feat(spinner): removal of spinner type prop and rename color prop to variant
BREAKING CHANGE: Users who previously use the props will find that it no longer applies and will
have styling breaks.

--- a/index.html
+++ b/index.html
@@ -356,15 +356,13 @@
             <h2>Spinner</h2>
             <div>
                 <sgds-spinner></sgds-spinner>
-                <sgds-spinner color="neutral"></sgds-spinner>
-                <sgds-spinner type="grow"></sgds-spinner>
-                <sgds-spinner type="grow" color="neutral"></sgds-spinner>
+                <sgds-spinner variant="neutral"></sgds-spinner>
             </div>
             <h3>With Label</h3>
             <div class="row">
                 <div class="grid">
                     <sgds-spinner>Loading</sgds-spinner>
-                    <sgds-spinner type="grow">Loading</sgds-spinner>
+                    <sgds-spinner variant="neutral">Loading</sgds-spinner>
                 </div>
             </div>
             <h3>Spinner Size</h3>
@@ -373,9 +371,6 @@
                     <sgds-spinner size="sm"></sgds-spinner>
                     <sgds-spinner></sgds-spinner>
                     <sgds-spinner size="lg"></sgds-spinner>
-                    <sgds-spinner type="grow" size="sm"></sgds-spinner>
-                    <sgds-spinner type="grow"></sgds-spinner>
-                    <sgds-spinner type="grow" size="lg"></sgds-spinner>
                 </div>
             </div>
         </div>
