--- a/index.html
+++ b/index.html
@@ -582,6 +582,7 @@
                 <h2>Button</h2>
                 <div>
                     <sgds-button >Default Button</sgds-button>
+                    <sgds-button variant="outlined" >Outlined Button</sgds-button>
                     <sgds-button variant="primary">Hello World</sgds-button>
                     <sgds-button variant="secondary">Hello World</sgds-button>
                     <sgds-button variant="warning">Hello World</sgds-button>
@@ -1126,7 +1127,7 @@
                     </sgds-tooltip>
                     <button onclick="tooltip.show()">click me</button>
                 </div>
-                <sgds-footer
+                <sgds-footer description="description"
                     links='[{"title":"Application Guidelines","url":"/application-guidelines/lorem-ipsum-one/second-level-a/","links":[{"label":"<div>hello world </div>","href":"/application-guidelines/lorem-ipsum-one/second-level-a/"},{"label":"Second Level B","href":"/application-guidelines/lorem-ipsum-two/part-A/"},{"label":"Lorem Ipsum Three","href":"/application-guidelines/lorem-ipsum-three/"}]},{"title":"Legislation","url":"#","external":true,"links":[{"label":"External Link One","href":"https://en.wikipedia.org/wiki/Year","external":true},{"label":"External Link Two","href":"https://en.wikipedia.org/wiki/Spring_(season)","external":true}]},{"title":"Resources","url":"/resource_room/","links":[{"label":"All","href":"/resource_room/"},{"label":"Forms and Templates","href":"/resource_room/forms-and-templates/"},{"label":"Guides","href":"/resource_room/guides/"}]}]'></sgds-footer>
 
                 <script>
