--- a/cypress/apps/angular-app/src/index.html
+++ b/cypress/apps/angular-app/src/index.html
@@ -5,8 +5,11 @@
   <title>Angular App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/npm/@govtechsg/sgds-web-component@v2.0.0-rc.1/Masthead/index.umd.js"></script>
+
 </head>
 <body>
+  <sgds-masthead></sgds-masthead>
   <app-root></app-root>
 </body>
 </html>
