feat(progress bar): update progress bar

--- a/index.html
+++ b/index.html
@@ -251,40 +251,40 @@
             <datepicker-input></datepicker-input>
             <h2>Progress</h2>
             <div class="row">
-                <div>
-                    <sgds-progress height="40">
+                <div class="container">
+                    <!-- <sgds-progress height="40"> -->
                         <sgds-progress-bar variant="primary" value="50" label="50%"></sgds-progress-bar>
-                    </sgds-progress>
-                    <sgds-progress height="40">
+                    <!-- </sgds-progress> -->
+                    <!-- <sgds-progress height="40"> -->
                         <sgds-progress-bar variant="secondary" value="50" label="50%"></sgds-progress-bar>
-                    </sgds-progress>
-                    <sgds-progress height="40">
+                    <!-- </sgds-progress> -->
+                    <!-- <sgds-progress height="40"> -->
                         <sgds-progress-bar variant="warning" value="50" label="50%"></sgds-progress-bar>
-                    </sgds-progress>
-                    <sgds-progress height="40">
+                    <!-- </sgds-progress> -->
+                    <!-- <sgds-progress height="40"> -->
                         <sgds-progress-bar variant="danger" value="50" label="50%"></sgds-progress-bar>
-                    </sgds-progress>
-                    <sgds-progress height="40">
+                    <!-- </sgds-progress> -->
+                    <!-- <sgds-progress height="40"> -->
                         <sgds-progress-bar variant="success" value="50" label="50%"></sgds-progress-bar>
-                    </sgds-progress>
-                    <sgds-progress height="40">
+                    <!-- </sgds-progress> -->
+                    <!-- <sgds-progress height="40"> -->
                         <sgds-progress-bar variant="info" value="50" label="50%"></sgds-progress-bar>
-                    </sgds-progress>
-                    <sgds-progress height="40">
+                    <!-- </sgds-progress> -->
+                    <!-- <sgds-progress height="40"> -->
                         <sgds-progress-bar variant="dark" value="50" label="50%"></sgds-progress-bar>
-                    </sgds-progress>
+                    <!-- </sgds-progress> -->
 
-                    <sgds-progress height="40">
+                    <!-- <sgds-progress height="40"> -->
                         <sgds-progress-bar value="50" variant="secondary" striped animated></sgds-progress-bar>
-                    </sgds-progress>
+                    <!-- </sgds-progress> -->
 
-                    <sgds-progress height="10">
+                    <!-- <sgds-progress height="10"> -->
                         <sgds-progress-bar value="50" striped animated variant="danger"></sgds-progress-bar>
-                    </sgds-progress>
+                    <!-- </sgds-progress> -->
 
-                    <sgds-progress height="40">
+                    <!-- <sgds-progress height="40"> -->
                         <sgds-progress-bar value="50" striped animated variant="danger" label="hey"></sgds-progress-bar>
-                    </sgds-progress>
+                    <!-- </sgds-progress> -->
                 </div>
             </div>
             <br />
