--- a/index.html
+++ b/index.html
@@ -643,19 +643,33 @@
                 <h2>File Upload</h2>
                 <div class="row">
                     <div class="col is-6">
-                        <sgds-file-upload id="my-fileupload" checkedIcon='<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-all" viewBox="0 0 16 16">
-                        <path d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992a.252.252 0 0 1 .02-.022zm-.92 5.14.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486-.943 1.179z"/>
-                      </svg>' cancelIcon='<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-5-square" viewBox="0 0 16 16">
-                        <path d="M7.994 12.158c-1.57 0-2.654-.902-2.719-2.115h1.237c.14.72.832 1.031 1.529 1.031.791 0 1.57-.597 1.57-1.681 0-.967-.732-1.57-1.582-1.57-.767 0-1.242.45-1.435.808H5.445L5.791 4h4.705v1.103H6.875l-.193 2.343h.064c.17-.258.715-.68 1.611-.68 1.383 0 2.561.944 2.561 2.585 0 1.687-1.184 2.806-2.924 2.806Z"/>
-                        <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2Zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2Z"/>
-                      </svg>' />
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-upload" viewBox="0 0 16 16">
-                            <path
-                                d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
-                            <path
-                                d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
-                        </svg> Choose a File
+                        <sgds-file-upload id="my-fileupload" multiple accept="image/png">
+                            <svg
+                                slot="icon"
+                                focusable="false"
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                height="24"
+                                width="24"
+                            >
+                                <path
+                                fill="currentColor"
+                                d="M20 7.36842H20.75C20.75 7.17241 20.6733 6.98418 20.5362 6.84404L20 7.36842ZM14.75 2L15.2862 1.47562C15.1451 1.33133 14.9518 1.25 14.75 1.25V2ZM5.25 3V18H6.75V3H5.25ZM7 19.75H19V18.25H7V19.75ZM20.75 18V7.36842H19.25V18H20.75ZM20.5362 6.84404L15.2862 1.47562L14.2138 2.52438L19.4638 7.8928L20.5362 6.84404ZM14.75 1.25H7V2.75H14.75V1.25ZM14 2V6.36842H15.5V2H14ZM15.75 8.11842H20V6.61842H15.75V8.11842ZM19 19.75C19.9665 19.75 20.75 18.9665 20.75 18H19.25C19.25 18.1381 19.1381 18.25 19 18.25V19.75ZM5.25 18C5.25 18.9665 6.0335 19.75 7 19.75V18.25C6.86193 18.25 6.75 18.1381 6.75 18H5.25ZM14 6.36842C14 7.33492 14.7835 8.11842 15.75 8.11842V6.61842C15.6119 6.61842 15.5 6.50649 15.5 6.36842H14ZM6.75 3C6.75 2.86193 6.86193 2.75 7 2.75V1.25C6.0335 1.25 5.25 2.0335 5.25 3H6.75Z"
+                                ></path>
+                                <path
+                                fill="currentColor"
+                                d="M2.25 6V21H3.75V6H2.25ZM4 22.75H16V21.25H4V22.75ZM6 4.25H4V5.75H6V4.25ZM17.75 21V19H16.25V21H17.75ZM16 22.75C16.9665 22.75 17.75 21.9665 17.75 21H16.25C16.25 21.1381 16.1381 21.25 16 21.25V22.75ZM2.25 21C2.25 21.9665 3.0335 22.75 4 22.75V21.25C3.86193 21.25 3.75 21.1381 3.75 21H2.25ZM3.75 6C3.75 5.86193 3.86193 5.75 4 5.75V4.25C3.0335 4.25 2.25 5.0335 2.25 6H3.75Z"
+                                ></path>
+                                <path
+                                stroke-linejoin="round"
+                                stroke-linecap="round"
+                                stroke-width="1.5"
+                                stroke="currentColor"
+                                d="M13 14.5V9.5M13 9.5L11 11.547M13 9.5L15 11.547"
+                                ></path>
+                            </svg>
+                            Drag and drop your files here, or click to select files
                         </sgds-file-upload>
                     </div>
                 </div>
