chore(*): update progress bar in index.html

--- a/index.html
+++ b/index.html
@@ -289,39 +289,26 @@
             <h2>Progress</h2>
             <div class="row">
                 <div class="container">
-                    <!-- <sgds-progress height="40"> -->
+                        <sgds-progress-bar variant="primary" value="10" label="10%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="primary" value="20" label="20%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="primary" value="30" label="30%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="primary" value="40" label="40%"></sgds-progress-bar>
                         <sgds-progress-bar variant="primary" value="50" label="50%"></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
-                    <!-- <sgds-progress height="40"> -->
-                        <sgds-progress-bar variant="secondary" value="50" label="50%"></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
-                    <!-- <sgds-progress height="40"> -->
-                        <sgds-progress-bar variant="warning" value="50" label="50%"></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
-                    <!-- <sgds-progress height="40"> -->
-                        <sgds-progress-bar variant="danger" value="50" label="50%"></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
-                    <!-- <sgds-progress height="40"> -->
-                        <sgds-progress-bar variant="success" value="50" label="50%"></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
-                    <!-- <sgds-progress height="40"> -->
-                        <sgds-progress-bar variant="info" value="50" label="50%"></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
-                    <!-- <sgds-progress height="40"> -->
-                        <sgds-progress-bar variant="dark" value="50" label="50%"></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
-
-                    <!-- <sgds-progress height="40"> -->
-                        <sgds-progress-bar value="50" variant="secondary" striped animated></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
-
-                    <!-- <sgds-progress height="10"> -->
-                        <sgds-progress-bar value="50" striped animated variant="danger"></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
-
-                    <!-- <sgds-progress height="40"> -->
-                        <sgds-progress-bar value="50" striped animated variant="danger" label="hey"></sgds-progress-bar>
-                    <!-- </sgds-progress> -->
+                        <sgds-progress-bar variant="primary" value="60" label="60%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="primary" value="70" label="70%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="primary" value="80" label="80%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="primary" value="90" label="90%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="primary" value="100" label="100%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="10" label="10%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="20" label="20%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="30" label="30%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="40" label="40%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="50" label="50%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="60" label="60%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="70" label="70%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="80" label="80%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="90" label="90%"></sgds-progress-bar>
+                        <sgds-progress-bar variant="neutral" value="100" label="100%"></sgds-progress-bar>
                 </div>
             </div>
             <br />
