feat(switch): icon and sizes

--- a/index.html
+++ b/index.html
@@ -735,7 +735,10 @@
                     <sgds-checkbox  variant = "focus">focus</sgds-checkbox>
                     <sgds-checkbox  variant = "disabled">disabled</sgds-checkbox>
                     <sgds-switch>Switch</sgds-switch>
+                    <sgds-switch icon>Switch with icon</sgds-switch>
                     <sgds-switch disabled>Switch</sgds-switch>
+                    <sgds-switch size="sm">Switch</sgds-switch>
+                    <sgds-switch size="lg">Switch</sgds-switch>
                     <sgds-button type="submit">Submit</sgds-button>
                 </form>
             </div>
