fix(masthead): remove css nestings

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
 <body class="d-flex flex-column min-vh-100"></body>
 <sgds-masthead fluid></sgds-masthead>
+<sgds-masthead></sgds-masthead>
 <sgds-mainnav expand="lg">
     <span slot="brand">Design System</span>
     <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand">
