feat(textarea): update textarea styling

--- a/index.html
+++ b/index.html
@@ -176,8 +176,20 @@
                 <i class="bi bi-arrow-right" slot="rightIcon"></i>
                 rightIcon</sgds-link>
             <sgds-icon name="6-square"></sgds-icon>
+            <sgds-textarea required label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test" hideCharacterCount
+                placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
+            </sgds-textarea>
             <sgds-textarea required label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
+                <span slot="hint-text">Hint text</span>
+            </sgds-textarea>
+            <sgds-textarea readonly value="Filled text" label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test"
+                placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
+                <span slot="hint-text">Hint text</span>
+            </sgds-textarea>
+            <sgds-textarea disabled label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test"
+                placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
+                <span slot="hint-text">Hint text</span>
             </sgds-textarea>
         </div>
         <div class="container">
