--- a/index.html
+++ b/index.html
@@ -739,6 +739,7 @@
                     <sgds-switch disabled>Switch</sgds-switch>
                     <sgds-switch size="sm">Switch</sgds-switch>
                     <sgds-switch size="lg">Switch</sgds-switch>
+                    <sgds-switch size="lg"><span slot="leftLabel">Switch</span></sgds-switch>
                     <sgds-button type="submit">Submit</sgds-button>
                 </form>
             </div>
